After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651503 - No icon in the Application Grid
No icon in the Application Grid
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: overview
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
: 651504 664924 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-05-30 21:23 UTC by Ayush Goyal
Modified: 2016-05-25 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
xsession-error (188.33 KB, text/plain)
2011-05-30 21:56 UTC, Ayush Goyal
  Details
appDisplay: Handle non-UTF8 filename encodings more gracefully (3.20 KB, patch)
2015-07-31 00:17 UTC, Florian Müllner
none Details | Review
apps-menu: Handle non-UTF8 filename encodings more gracefully (1.42 KB, patch)
2015-07-31 00:18 UTC, Florian Müllner
committed Details | Review
appDisplay: Handle non-UTF8 filename encodings more gracefully (3.61 KB, patch)
2015-07-31 14:21 UTC, Florian Müllner
committed Details | Review

Description Ayush Goyal 2011-05-30 21:23:47 UTC
Earlier the applications grid worked normally.For past few days it lists no icon/text when i click on applications tab from "Activities". I can only search and even in search some icons do not show only text is shown.
Comment 1 Jasper St. Pierre (not reading bugmail) 2011-05-30 21:41:00 UTC
*** Bug 651504 has been marked as a duplicate of this bug. ***
Comment 2 Jasper St. Pierre (not reading bugmail) 2011-05-30 21:41:35 UTC
Can you attach ~/.xsession-errors?
Comment 3 Ayush Goyal 2011-05-30 21:56:59 UTC
Created attachment 188898 [details]
xsession-error

here it is
Comment 4 Jasper St. Pierre (not reading bugmail) 2011-05-30 22:37:39 UTC
    JS ERROR: !!!   Exception was: Error: Failed to convert UTF-8 string to JS string: Invalid byte sequence in conversion input
    JS ERROR: !!!     lineNumber = '0'
    JS ERROR: !!!     fileName = 'gjs_throw'
    JS ERROR: !!!     stack = '("Failed to convert UTF-8 string to JS string: Invalid byte sequence in conversion input")@gjs_throw:0

You seem to have an invalid .desktop file.

We should probably catch the error and log the filename of the incorrect .desktop file.
Comment 5 Ayush Goyal 2011-05-30 23:34:43 UTC
thanks for replying it so quickly. wonder why didn't i posted this earlier before. Can u tell me where are those .desktop files located may be i will correct it myself
Comment 6 Ayush Goyal 2011-05-30 23:48:22 UTC
ok i hv corrected problem on my PC. in ~/.local/share/applications there was a folder of a wine application that i had installed that had wrong encoding. I corrected that and now the problem is resolved for me. But i think shell should be able to catch this error and correct it itself.
Comment 7 Jasper St. Pierre (not reading bugmail) 2011-05-30 23:57:01 UTC
It's impossible to "correct" it... we can only take a naive guess at the correct encoding, so either we just don't show the icon and log the error, or we display it without a name.

However, wine should encode all its .desktop file data in UTF8, or at the very least ensure that all its data is valid UTF8.
Comment 8 Tobias Mueller 2011-09-13 14:34:58 UTC
Setting to NEW as the last comment indicates that this is indeed an issue that needs to be handled.
Comment 9 Florian Müllner 2015-07-31 00:17:53 UTC
Created attachment 308501 [details] [review]
appDisplay: Handle non-UTF8 filename encodings more gracefully

It may be 2015, but users still stumble upon the occasional .desktop
file that uses a filename encoding other than UTF-8. We currently
fail quite spectacularly in that case by not displaying any apps at
all - handle this case more gracefully, by only filtering out the
offending apps.
Comment 10 Florian Müllner 2015-07-31 00:18:33 UTC
Created attachment 308502 [details] [review]
apps-menu: Handle non-UTF8 filename encodings more gracefully

Instead of failing completely if any .desktop file uses a filename
encoding other than UTF-8, just filter out the offending apps.
Comment 11 Rui Matos 2015-07-31 12:56:22 UTC
Review of attachment 308501 [details] [review]:

There's another Gio.AppInfo.get_all() in ForderIcon._redisplay() that looks like it should have the same try/catch precaution
Comment 12 Rui Matos 2015-07-31 13:08:54 UTC
Review of attachment 308502 [details] [review]:

ok
Comment 13 Florian Müllner 2015-07-31 14:21:31 UTC
Created attachment 308556 [details] [review]
appDisplay: Handle non-UTF8 filename encodings more gracefully

Good catch, thanks!
Comment 14 Florian Müllner 2015-07-31 14:24:22 UTC
Comment on attachment 308502 [details] [review]
apps-menu: Handle non-UTF8 filename encodings more gracefully

Attachment 308502 [details] pushed as d1bf592 - apps-menu: Handle non-UTF8 filename encodings more gracefully
Comment 15 Rui Matos 2015-07-31 14:41:55 UTC
Review of attachment 308556 [details] [review]:

look fine. hopefully there aren't any other places lurking but I guess we'll hear from the bug reporters if so :-)
Comment 16 Florian Müllner 2015-07-31 15:01:11 UTC
Attachment 308556 [details] pushed as fed79ce - appDisplay: Handle non-UTF8 filename encodings more gracefully

There are probably some other issues when running an app with a bad .desktop file, for instance when trying to add it as favorite to the dash. However I don't expect it to be quite as catastrophic for other apps ...
Comment 17 Florian Müllner 2016-05-25 14:00:45 UTC
*** Bug 664924 has been marked as a duplicate of this bug. ***