src/cinnamon-app-system.c
@@ -430,3 +430,27 @@ cinnamon_app_system_get_running (CinnamonAppSystem *self)
 
   return ret;
 }
+
+/**
+ * cinnamon_app_system_search:
+ * @search_string: the search string to use
+ *
+ * Wrapper around g_desktop_app_info_search() that replaces results that
+ * don't validate as UTF-8 with the empty string.
+ *
+ * Returns: (array zero-terminated=1) (element-type GStrv) (transfer full): a
+ *   list of strvs.  Free each item with g_strfreev() and free the outer
+ *   list with g_free().
+ */
+char ***
+cinnamon_app_system_search (const char *search_string)
+{
+    char ***results = g_desktop_app_info_search (search_string);
+
+    for (char ***groups = results; *groups; groups++)
+      for (char **ids = *groups; *ids; ids++)
+        if (!g_utf8_validate (*ids, -1, NULL))
+          **ids = '\0';
+
+      return results;
+}
