js/ui/appDisplay.js
@@ -500,6 +500,11 @@ const AllView = new Lang.Class({
 
     _loadApps: function() {
         let apps = Gio.AppInfo.get_all().filter(function(appInfo) {
+            try {
+                let id = appInfo.get_id(); // catch invalid file encodings
+            } catch(e) {
+                return false;
+            }
             return appInfo.should_show();
         }).map(function(app) {
             return app.get_id();
@@ -1061,7 +1066,7 @@ const AppSearchProvider = new Lang.Class({
 
     getInitialResultSet: function(terms, callback, cancellable) {
         let query = terms.join(' ');
-        let groups = Gio.DesktopAppInfo.search(query);
+        let groups = Shell.AppSystem.search(query);
         let usage = Shell.AppUsage.get_default();
         let results = [];
         groups.forEach(function(group) {
@@ -1290,7 +1295,10 @@ const FolderIcon = new Lang.Class({
             if (!_listsIntersect(folderCategories, appCategories))
                 return;
 
-            addAppId(appInfo.get_id());
+            try {
+                addAppId(appInfo.get_id()); // catch invalid file encodings
+            } catch(e) {
+            }
         });
 
         this.actor.visible = this.view.getAllItems().length > 0;
